--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                 </a>
                 <p class="text">
                   A website of WebStudio company. Responsive design, transform
-                  effects, modal windows. Individual project.
+                  effects, modal windows. <br />
+                  Individual project.
                 </p>
               </li>
               <li class="project-item">
@@ -192,8 +193,9 @@
                 <p class="text">
                   Website for a chocolate product company. Adaptive design,
                   animations, modal windows, and burger menu for novigation.
-                  Command project. Role: Scrum Master, developer of the header
-                  section.
+                  <br />
+                  Command project. <br />
+                  Role: Scrum Master, developer of the header section.
                 </p>
               </li>
               <li class="project-item">
@@ -213,6 +215,7 @@
                 >
                 <p class="text">
                   Landing page "My Dreams" Responsive design, transform effects.
+                  <br />
                   Individual project.
                 </p>
               </li>
