--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 >
                 <p class="text">
                   Website for a chocolate product company. Adaptive design,
-                  animations, modal windows, and burger menu for novigation.
+                  animations, modal windows and burger menu for novigation.
                   <br />
                   Command project. <br />
                   Role: Scrum Master, developer of the header section.
