--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
 
         <aside class="aside">
           <!--about-section-->
-
-          <img
-            src="./img/foto.jpg"
-            alt="foto"
-            width="370"
-            height="354"
-            class="foto-img"
-          />
+          <div class="img-wrap">
+            <img src="./img/foto.jpg" alt="foto" class="foto-img" />
+          </div>
 
           <section class="about">
             <h2 class="secondary-heder aside-secondary-heder">CONTACTS</h2>
@@ -148,7 +143,7 @@
 
           <!--/hero-section-->
 
-          <!--courses-section-->
+          <!--project-section-->
 
           <section class="project-section">
             <h2 class="secondary-header right-header">PROJECT EXPERIENCE</h2>
@@ -203,18 +198,40 @@
                   target="_blank"
                   rel="nofollow"
                   class="project-name link"
-                  href="https://irina2304.github.io/WayUp/"
-                  >Landing page "My Dreams"</a
+                  href="https://irina2304.github.io/goit-js-hw-10/"
+                  >Searching information about a cat by its breed</a
                 >
                 <a
                   target="_blank"
                   rel="nofollow"
                   class="git-name link"
-                  href="https://github.com/Irina2304/WayUp"
-                  >GitHub-repository (HTML, CSS)</a
+                  href="https://github.com/Irina2304/goit-js-hw-10"
+                  >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  Landing page "My Dreams" Responsive design, transform effects.
+                  With the help of JS, the front-end part of the application was
+                  created for searching information about a cat by its breed.
+                  <br />
+                  Individual project.
+                </p>
+              </li>
+              <li class="project-item">
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="project-name link"
+                  href="https://irina2304.github.io/goit-react-hw-04-images/"
+                  >Image search</a
+                >
+                <a
+                  target="_blank"
+                  rel="nofollow"
+                  class="git-name link"
+                  href="https://github.com/Irina2304/goit-react-hw-04-images"
+                  >GitHub-repository (HTML, CSS, JS)</a
+                >
+                <p class="text">
+                  An image search application by keyword. React hooks are used.
                   <br />
                   Individual project.
                 </p>
@@ -222,7 +239,7 @@
             </ul>
           </section>
 
-          <!--/courses-section-->
+          <!--/project-section-->
 
           <!--work-section-->
 
@@ -269,7 +286,7 @@
                   >National Technical University of Ukraine “Igor Sikorsky Kyiv
                   Polytechnic Institute”
                 </a>
-                <h4>Specialist</h4>
+                <h3>Specialist</h3>
                 <p class="university-text text">
                   Diploma with distinction KВ No 33239282 <br />
                   Field of study/specialty "Welding technology and equipment"
@@ -288,7 +305,10 @@
                   href="https://goit.global/ua/"
                   >IT School GoIT
                 </a>
-                <h4>Full Stack Developer</h4>
+                <h3>Full Stack Developer</h3>
+                <p class="university-text text">
+                  The form of study is evening form of education
+                </p>
                 <p class="date-text text">March 2023 - January 2024</p>
               </li>
             </ul>
