--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 
         <div class="section">
           <section class="hero-section">
-            <p class="bold-text">Junior Full Stack Developer</p>
+            <p class="bold-text">Junior Frontend Developer</p>
             <h1 class="hero-name">IRYNA KULYK</h1>
             <p class="text hero-text">
-              I am a Junior Full Stack Developer with knowledge of HTML, CSS and
+              I am a Junior Frontend Developer with knowledge of HTML, CSS and
               JavaScript. I have implemented several projects, including both
               team and individual ones. I know how to communicate with people
               and find ways to solve tasks. I strive for professional growth and
