--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <li class="lang-item">Ukrainian - Native</li>
               <li class="lang-item">Russian - Native</li>
               <li class="lang-item">English - Pre-Intermediate</li>
-              <li class="lang-item">Deutsch - Elementary</li>
+              <li class="lang-item">Deutsch - Pre-Intermediate</li>
             </ul>
           </section>
 
