--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
               <li class="skills-item">GIT</li>
               <li class="skills-item">JavaScript</li>
               <li class="skills-item">REST API</li>
+              <li class="skills-item">React</li>
             </ul>
           </section>
 
@@ -198,21 +199,23 @@
                   target="_blank"
                   rel="nofollow"
                   class="project-name link"
-                  href="https://irina2304.github.io/goit-js-hw-10/"
-                  >Searching information about a cat by its breed</a
+                  href="https://irina2304.github.io/Tasty-Treats/"
+                  >Tasty-Treats</a
                 >
                 <a
                   target="_blank"
                   rel="nofollow"
                   class="git-name link"
-                  href="https://github.com/Irina2304/goit-js-hw-10"
+                  href="https://github.com/Irina2304/Tasty-Treats"
                   >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  With the help of JS, the front-end part of the application was
-                  created for searching information about a cat by its breed.
+                  Website for a food company. Adaptive design, animations, modal
+                  windows and burger menu for novigation.
                   <br />
-                  Individual project.
+                  Command project. <br />
+                  Role: Developer of the "All categories" and "Popular recipes"
+                  sections.
                 </p>
               </li>
               <li class="project-item">
@@ -220,18 +223,18 @@
                   target="_blank"
                   rel="nofollow"
                   class="project-name link"
-                  href="https://irina2304.github.io/goit-react-hw-04-images/"
-                  >Image search</a
+                  href="https://irina2304.github.io/cities_search/"
+                  >Cities search</a
                 >
                 <a
                   target="_blank"
                   rel="nofollow"
                   class="git-name link"
-                  href="https://github.com/Irina2304/goit-react-hw-04-images"
+                  href="https://github.com/Irina2304/cities_search"
                   >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  An image search application by keyword. React hooks are used.
+                  An cities search application. React hooks are used.
                   <br />
                   Individual project.
                 </p>
@@ -307,9 +310,10 @@
                 </a>
                 <h3>Full Stack Developer</h3>
                 <p class="university-text text">
+                  Unique ID 23531 <br />
                   The form of study is evening form of education
                 </p>
-                <p class="date-text text">March 2023 - January 2024</p>
+                <p class="date-text text">March 2023 - February 2024</p>
               </li>
             </ul>
           </section>
