--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My resume en</title>
+    <title>Lebenslauf</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
@@ -46,7 +46,7 @@
               </li>
               <li class="about-item">
                 <a
-                  href="tg://resolve?domain=irisha_kulik"
+                  href="tg://resolve?domain=irisha_kulyk"
                   class="adress-link link"
                   >Telegram</a
                 >
@@ -96,13 +96,12 @@
           <section class="skills">
             <h2 class="secondary-heder aside-secondary-heder">SOFT SKILLS</h2>
             <ul class="skills-list list">
-              <li class="skills-item">Communicative</li>
-              <li class="skills-item">Attentive</li>
-              <li class="skills-item">Teamwork</li>
-              <li class="skills-item">Calm</li>
-              <li class="skills-item">Eager to learn</li>
-              <li class="skills-item">Diligent</li>
-              <li class="skills-item">Hardworking</li>
+              <li class="skills-item">Kommunikationsstark</li>
+              <li class="skills-item">Detailorientiert</li>
+              <li class="skills-item">Teamfähig</li>
+              <li class="skills-item">Lernbegierig</li>
+              <li class="skills-item">Gewissenhaft</li>
+              <li class="skills-item">Fleißig</li>
             </ul>
           </section>
 
@@ -111,12 +110,12 @@
           <!--lang-section-->
 
           <section class="lang">
-            <h2 class="secondary-heder aside-secondary-heder">LANGUAGES</h2>
+            <h2 class="secondary-heder aside-secondary-heder">SPRACHEN</h2>
             <ul class="lang-list list">
-              <li class="lang-item">Ukrainian - Native</li>
-              <li class="lang-item">Russian - Native</li>
-              <li class="lang-item">English - Pre-Intermediate</li>
-              <li class="lang-item">Deutsch - Pre-Intermediate</li>
+              <li class="lang-item">Ukrainisch – Muttersprache</li>
+              <li class="lang-item">Russisch – Muttersprache</li>
+              <li class="lang-item">Englisch – А2 (Pre-Intermediate)</li>
+              <li class="lang-item">Deutsch – B1 (Intermediate)</li>
             </ul>
           </section>
 
@@ -134,11 +133,12 @@
             <p class="bold-text">Junior Frontend Developer</p>
             <h1 class="hero-name">IRYNA KULYK</h1>
             <p class="text hero-text">
-              I am a Junior Frontend Developer with knowledge of HTML, CSS and
-              JavaScript. I have implemented several projects, including both
-              team and individual ones. I know how to communicate with people
-              and find ways to solve tasks. I strive for professional growth and
-              the achievement of high-performance indicators.
+              Ich bin eine Junior-Frontend-Entwicklerin mit Erfahrung in HTML,
+              CSS und JavaScript. Ich habe sowohl selbstständig als auch im Team
+              an Projekten gearbeitet und finde dank meiner
+              Kommunikationsfähigkeiten effektive Lösungen. Mein Ziel ist es,
+              meine Fähigkeiten kontinuierlich zu verbessern und exzellente
+              Ergebnisse zu erzielen.
             </p>
           </section>
 
@@ -147,7 +147,7 @@
           <!--project-section-->
 
           <section class="project-section">
-            <h2 class="secondary-header right-header">PROJECT EXPERIENCE</h2>
+            <h2 class="secondary-header right-header">PROJEKTERFAHRUNG</h2>
             <ul class="project-list list">
               <li class="project-item">
                 <a
@@ -166,9 +166,9 @@
                   GitHub-repository (HTML, CSS, JS)
                 </a>
                 <p class="text">
-                  A website of WebStudio company. Responsive design, transform
-                  effects, modal windows. <br />
-                  Individual project.
+                  Eine Website der WebStudio Firma. Responsives Design,
+                  Transformationseffekte, Modalfenster. <br />
+                  Einzelprojekt.
                 </p>
               </li>
               <li class="project-item">
@@ -187,11 +187,12 @@
                   >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  Website for a chocolate product company. Adaptive design,
-                  animations, modal windows and burger menu for novigation.
+                  Website für ein Schokoladenproduktunternehmen.
+                  Anpassungsfähiges Design, Animationen, Modalfenster und
+                  Burger-Menü für die Navigation.
                   <br />
-                  Command project. <br />
-                  Role: Scrum Master, developer of the header section.
+                  Teamprojekt. <br />
+                  Rolle: Scrum Master, Entwickler des Header-Bereichs.
                 </p>
               </li>
               <li class="project-item">
@@ -210,12 +211,13 @@
                   >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  Website for a food company. Adaptive design, animations, modal
-                  windows and burger menu for novigation.
+                  Website für ein Lebensmittelunternehmen. Anpassungsfähiges
+                  Design, Animationen, Modalfenster und Burger-Menü für die
+                  Navigation.
                   <br />
-                  Command project. <br />
-                  Role: Developer of the "All categories" and "Popular recipes"
-                  sections.
+                  Teamprojekt. <br />
+                  Rolle: Entwickler der Abschnitte "Alle Kategorien" und
+                  "Beliebte Rezepte".
                 </p>
               </li>
               <li class="project-item">
@@ -234,9 +236,9 @@
                   >GitHub-repository (HTML, CSS, JS)</a
                 >
                 <p class="text">
-                  An cities search application. React hooks are used.
+                  Eine Städte-Suchanwendung. React Hooks werden verwendet.
                   <br />
-                  Individual project.
+                  Einzelprojekt.
                 </p>
               </li>
             </ul>
@@ -247,11 +249,11 @@
           <!--work-section-->
 
           <section class="work-section">
-            <h2 class="secondary-header right-header">WORK EXPERIENCE</h2>
+            <h2 class="secondary-header right-header">BERUFSERFAHRUNG</h2>
             <ul class="work-list list">
               <li class="work-item">
                 <h3 class="work-name third-header">
-                  Design engineer
+                  Konstrukteur
                   <span class="akcent-color">OJSC "GSKTI"</span>
                 </h3>
                 <p class="date-text text">
@@ -259,14 +261,39 @@
                 </p>
                 <ul class="responsibilities-list list">
                   <li class="responsibilities-item">
-                    Development of design documentation.
+                    Entwicklung von Konstruktionsdokumentationen.
                   </li>
                   <li class="responsibilities-item">
-                    Designing of assemblies and assembly units of metallurgical
-                    equipment.
+                    Projektierung von Baugruppen und Montageeinheiten für
+                    metallurgische Ausrüstungen.
                   </li>
                   <li class="responsibilities-item">
-                    Carrying out technical calculations.
+                    Durchführung technischer Berechnungen.
+                  </li>
+                </ul>
+              </li>
+              <li class="work-item">
+                <h3 class="work-name third-header">
+                  Junior Frontend Developer (ehrenamtlich)
+                  <a
+                    target="_blank"
+                    class="akcent-color link"
+                    rel="nofollow"
+                    href="https://www.linkedin.com/company/wego-soft/posts/?feedView=all"
+                    >WeGo
+                  </a>
+                </h3>
+                <p class="date-text text">August 2024 - November 2024</p>
+                <ul class="responsibilities-list list">
+                  <li class="responsibilities-item">
+                    Freiwillige Mitarbeit an der Entwicklung von Webanwendungen
+                    mit Next.js, Material-UI.
+                  </li>
+                  <li class="responsibilities-item">
+                    Umsetzung von Benutzeroberflächen.
+                  </li>
+                  <li class="responsibilities-item">
+                    Fehlerbehebung und Optimierung der Performance.
                   </li>
                 </ul>
               </li>
@@ -278,7 +305,7 @@
           <!--education-section-->
 
           <section class="education-section">
-            <h2 class="secondary-header right-header">EDUCATION</h2>
+            <h2 class="secondary-header right-header">AUSBILDUNG</h2>
             <ul class="education-list list">
               <li class="education-item">
                 <a
@@ -286,18 +313,19 @@
                   rel="nofollow"
                   class="university-name third-header link"
                   href="https://kpi.ua/"
-                  >National Technical University of Ukraine “Igor Sikorsky Kyiv
-                  Polytechnic Institute”
+                  >Nationale Technische Universität der Ukraine „Igor Sikorsky
+                  Kyiv Polytechnic Institute”
                 </a>
-                <h3>Specialist</h3>
+                <h3>Spezialist</h3>
                 <p class="university-text text">
-                  Diploma with distinction KВ No 33239282 <br />
-                  Field of study/specialty "Welding technology and equipment"
+                  Diplom mit Auszeichnung, KВ Nr. 33239282 <br />
+                  Studienrichtung/Spezialität: „Schweißtechnologie und
+                  -ausrüstung“
                   <br />
-                  The form of study is full-time <br />
+                  Die Studienform ist Präsenzstudium <br />
                 </p>
                 <p class="date-text text">
-                  September 2002 - March 2008 | Ukraine, Kyiv
+                  September 2002 - März 2008 | Ukraine, Kiew
                 </p>
               </li>
               <li class="education-item">
@@ -306,14 +334,14 @@
                   rel="nofollow"
                   class="university-name third-header link"
                   href="https://goit.global/ua/"
-                  >IT School GoIT
+                  >IT-Schule GoIT
                 </a>
                 <h3>Full Stack Developer</h3>
                 <p class="university-text text">
-                  Unique ID 23531 <br />
-                  The form of study is evening form of education
+                  Eindeutige ID: 23531 <br />
+                  Die Studienform ist Abendstudium
                 </p>
-                <p class="date-text text">March 2023 - February 2024</p>
+                <p class="date-text text">März 2023 - Februar 2024</p>
               </li>
             </ul>
           </section>
